[gd_scene load_steps=51 format=2]

[ext_resource path="res://ui/Pictures/partybg.PNG" type="Texture" id=1]
[ext_resource path="res://ui/PARTY.gd" type="Script" id=2]
[ext_resource path="res://ui/Pictures/partyPanelRound.png" type="Texture" id=3]
[ext_resource path="res://ui/Pictures/partyPanelRoundSel.png" type="Texture" id=4]
[ext_resource path="res://ui/Pictures/partyPanelRoundFnt.png" type="Texture" id=5]
[ext_resource path="res://ui/Pictures/partyPanelRoundSelFnt.png" type="Texture" id=6]
[ext_resource path="res://ui/Pictures/partyPanelRoundSwap.png" type="Texture" id=7]
[ext_resource path="res://ui/Pictures/partyPanelRoundSelSwap.png" type="Texture" id=8]
[ext_resource path="res://ui/Pictures/partyPanelRect.png" type="Texture" id=9]
[ext_resource path="res://ui/Pictures/partyPanelRectSel.png" type="Texture" id=10]
[ext_resource path="res://ui/Pictures/partyPanelBlank.png" type="Texture" id=11]
[ext_resource path="res://ui/Pictures/partyPanelRectFnt.png" type="Texture" id=12]
[ext_resource path="res://ui/Pictures/partyPanelRectSelFnt.png" type="Texture" id=13]
[ext_resource path="res://ui/Pictures/partyPanelRectSwap.png" type="Texture" id=14]
[ext_resource path="res://ui/Pictures/partyCancel.png" type="Texture" id=15]
[ext_resource path="res://ui/Pictures/partyCancelSel.png" type="Texture" id=16]
[ext_resource path="res://font/df_party_lletraGran.tres" type="DynamicFont" id=17]
[ext_resource path="res://font/pkmnem.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://font/df_party_lletraPetita.tres" type="DynamicFont" id=19]
[ext_resource path="res://font/pkmnems.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://ui/Pictures/partyBall.PNG" type="Texture" id=21]
[ext_resource path="res://Sprites/Icons/icon025.png" type="Texture" id=22]
[ext_resource path="res://ui/Pictures/female_icon.png" type="Texture" id=23]
[ext_resource path="res://ui/Pictures/HPbar_party.tscn" type="PackedScene" id=24]
[ext_resource path="res://ui/MSG.tscn" type="PackedScene" id=25]
[ext_resource path="res://ui/choice 1_old.png" type="Texture" id=26]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 512, 384 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 112, 48 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 112, 48 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="DynamicFont" id=16]
size = 26
outline_color = Color( 0.00784314, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=17]
size = 22
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=18]
size = 26
outline_color = Color( 0.00784314, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 18 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 256, 98 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 112, 48 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 32.0
margin_right = 32.0
margin_top = 32.0
margin_bottom = 32.0

[sub_resource type="DynamicFont" id=24]
size = 26
outline_color = Color( 0.337255, 0.12549, 0.12549, 1 )
use_mipmaps = true
font_data = ExtResource( 18 )

[node name="PARTY" type="Panel"]
margin_left = 0.371427
margin_top = -0.229492
margin_right = 512.371
margin_bottom = 383.771
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
style_rounded_normal = SubResource( 2 )
style_rounded_normal_sel = SubResource( 3 )
style_rounded_fainted = SubResource( 4 )
style_rounded_fainted_sel = SubResource( 5 )
style_rounded_swap = SubResource( 6 )
style_rounded_swap_sel = SubResource( 7 )
style_square_normal = SubResource( 8 )
style_square_normal_sel = SubResource( 9 )
style_square_empty = SubResource( 10 )
style_square_fainted = SubResource( 11 )
style_square_fainted_sel = SubResource( 12 )
style_square_swap = SubResource( 13 )
style_square_swap_sel = SubResource( 14 )
style_salir = SubResource( 21 )
style_salir_sel = SubResource( 22 )

[node name="PKMN_0" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_right = 256.0
margin_bottom = 98.0
focus_neighbour_right = NodePath("../PKMN_1")
focus_neighbour_bottom = NodePath("../PKMN_2")
focus_mode = 2
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="PKMN_0"]
editor/display_folded = true
margin_left = 95.0
margin_top = 20.408
margin_right = 180.0
margin_bottom = 66.408
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Pikachu"

[node name="Outline" type="Label" parent="PKMN_0/Nombre"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Pikachu"

[node name="Nivel" type="Label" parent="PKMN_0"]
editor/display_folded = true
margin_left = 20.0
margin_top = 67.0
margin_right = 105.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Nv.25"

[node name="Outline" type="Label" parent="PKMN_0/Nivel"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Nv.25"

[node name="HP" type="Label" parent="PKMN_0"]
margin_left = 163.0
margin_top = 64.0
margin_right = 248.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "58/58"

[node name="Outline" type="Label" parent="PKMN_0/HP"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "58/58"

[node name="ball" type="Sprite" parent="PKMN_0"]
position = Vector2( 31.6, 28 )
texture = ExtResource( 21 )

[node name="pkmn" type="Sprite" parent="PKMN_0"]
position = Vector2( 57.6, 34 )
texture = ExtResource( 22 )
hframes = 2

[node name="gender" type="Sprite" parent="PKMN_0"]
position = Vector2( 229, 32 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )

[node name="health_bar" parent="PKMN_0" instance=ExtResource( 24 )]
editor/display_folded = true
position = Vector2( 124, 56 )

[node name="PKMN_1" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 256.0
margin_top = 16.0
margin_right = 512.0
margin_bottom = 114.0
focus_neighbour_left = NodePath("../PKMN_0")
focus_neighbour_bottom = NodePath("../PKMN_3")
focus_mode = 2
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="PKMN_1"]
margin_left = 95.0
margin_top = 20.408
margin_right = 180.0
margin_bottom = 66.408
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Pikachu"

[node name="Outline" type="Label" parent="PKMN_1/Nombre"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Pikachu"

[node name="Nivel" type="Label" parent="PKMN_1"]
margin_left = 20.0
margin_top = 67.0
margin_right = 105.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Nv.25"

[node name="Outline" type="Label" parent="PKMN_1/Nivel"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Nv.25"

[node name="HP" type="Label" parent="PKMN_1"]
margin_left = 163.0
margin_top = 64.0
margin_right = 248.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "58/58"

[node name="Outline" type="Label" parent="PKMN_1/HP"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "58/58"

[node name="ball" type="Sprite" parent="PKMN_1"]
position = Vector2( 31.6, 28 )
texture = ExtResource( 21 )

[node name="pkmn" type="Sprite" parent="PKMN_1"]
position = Vector2( 57.6, 34 )
texture = ExtResource( 22 )
hframes = 2

[node name="gender" type="Sprite" parent="PKMN_1"]
position = Vector2( 229, 32 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )

[node name="health_bar" parent="PKMN_1" instance=ExtResource( 24 )]
position = Vector2( 124, 56 )

[node name="PKMN_2" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_top = 96.0
margin_right = 256.0
margin_bottom = 194.0
focus_neighbour_top = NodePath("../PKMN_0")
focus_neighbour_right = NodePath("../PKMN_3")
focus_neighbour_bottom = NodePath("../PKMN_4")
focus_mode = 2
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="PKMN_2"]
margin_left = 95.0
margin_top = 20.408
margin_right = 180.0
margin_bottom = 66.408
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Pikachu"

[node name="Outline" type="Label" parent="PKMN_2/Nombre"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Pikachu"

[node name="Nivel" type="Label" parent="PKMN_2"]
margin_left = 20.0
margin_top = 67.0
margin_right = 105.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Nv.25"

[node name="Outline" type="Label" parent="PKMN_2/Nivel"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Nv.25"

[node name="HP" type="Label" parent="PKMN_2"]
margin_left = 163.0
margin_top = 64.0
margin_right = 248.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "58/58"

[node name="Outline" type="Label" parent="PKMN_2/HP"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "58/58"

[node name="ball" type="Sprite" parent="PKMN_2"]
position = Vector2( 31.6, 28 )
texture = ExtResource( 21 )

[node name="pkmn" type="Sprite" parent="PKMN_2"]
position = Vector2( 57.6, 34 )
texture = ExtResource( 22 )
hframes = 2

[node name="gender" type="Sprite" parent="PKMN_2"]
position = Vector2( 229, 32 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )

[node name="health_bar" parent="PKMN_2" instance=ExtResource( 24 )]
position = Vector2( 124, 56 )

[node name="PKMN_3" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 256.0
margin_top = 112.0
margin_right = 512.0
margin_bottom = 210.0
focus_neighbour_left = NodePath("../PKMN_2")
focus_neighbour_top = NodePath("../PKMN_1")
focus_neighbour_bottom = NodePath("../PKMN_5")
focus_mode = 2
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="PKMN_3"]
margin_left = 95.0
margin_top = 20.408
margin_right = 180.0
margin_bottom = 66.408
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Pikachu"

[node name="Outline" type="Label" parent="PKMN_3/Nombre"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Pikachu"

[node name="Nivel" type="Label" parent="PKMN_3"]
margin_left = 20.0
margin_top = 67.0
margin_right = 105.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Nv.25"

[node name="Outline" type="Label" parent="PKMN_3/Nivel"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Nv.25"

[node name="HP" type="Label" parent="PKMN_3"]
margin_left = 163.0
margin_top = 64.0
margin_right = 248.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "58/58"

[node name="Outline" type="Label" parent="PKMN_3/HP"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "58/58"

[node name="ball" type="Sprite" parent="PKMN_3"]
position = Vector2( 31.6, 28 )
texture = ExtResource( 21 )

[node name="pkmn" type="Sprite" parent="PKMN_3"]
position = Vector2( 57.6, 34 )
texture = ExtResource( 22 )
hframes = 2

[node name="gender" type="Sprite" parent="PKMN_3"]
position = Vector2( 229, 32 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )

[node name="health_bar" parent="PKMN_3" instance=ExtResource( 24 )]
position = Vector2( 124, 56 )

[node name="PKMN_4" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_top = 192.0
margin_right = 256.0
margin_bottom = 290.0
focus_neighbour_top = NodePath("../PKMN_2")
focus_neighbour_right = NodePath("../PKMN_5")
focus_mode = 2
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="PKMN_4"]
margin_left = 95.0
margin_top = 20.408
margin_right = 180.0
margin_bottom = 66.408
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Pikachu"

[node name="Outline" type="Label" parent="PKMN_4/Nombre"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Pikachu"

[node name="Nivel" type="Label" parent="PKMN_4"]
margin_left = 20.0
margin_top = 67.0
margin_right = 105.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Nv.25"

[node name="Outline" type="Label" parent="PKMN_4/Nivel"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Nv.25"

[node name="HP" type="Label" parent="PKMN_4"]
margin_left = 163.0
margin_top = 64.0
margin_right = 248.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "58/58"

[node name="Outline" type="Label" parent="PKMN_4/HP"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "58/58"

[node name="ball" type="Sprite" parent="PKMN_4"]
position = Vector2( 31.6, 28 )
texture = ExtResource( 21 )

[node name="pkmn" type="Sprite" parent="PKMN_4"]
position = Vector2( 57.6, 34 )
texture = ExtResource( 22 )
hframes = 2

[node name="gender" type="Sprite" parent="PKMN_4"]
position = Vector2( 229, 32 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )

[node name="health_bar" parent="PKMN_4" instance=ExtResource( 24 )]
position = Vector2( 124, 56 )

[node name="PKMN_5" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 256.0
margin_top = 208.0
margin_right = 512.0
margin_bottom = 306.0
focus_neighbour_left = NodePath("../PKMN_4")
focus_neighbour_top = NodePath("../PKMN_3")
focus_neighbour_bottom = NodePath("../Salir")
focus_mode = 2
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="PKMN_5"]
margin_left = 95.0
margin_top = 20.408
margin_right = 180.0
margin_bottom = 66.408
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Pikachu"

[node name="Outline" type="Label" parent="PKMN_5/Nombre"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Pikachu"

[node name="Nivel" type="Label" parent="PKMN_5"]
margin_left = 20.0
margin_top = 67.0
margin_right = 105.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "Nv.25"

[node name="Outline" type="Label" parent="PKMN_5/Nivel"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Nv.25"

[node name="HP" type="Label" parent="PKMN_5"]
margin_left = 163.0
margin_top = 64.0
margin_right = 248.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "58/58"

[node name="Outline" type="Label" parent="PKMN_5/HP"]
margin_right = 85.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "58/58"

[node name="ball" type="Sprite" parent="PKMN_5"]
position = Vector2( 31.6, 28 )
texture = ExtResource( 21 )

[node name="pkmn" type="Sprite" parent="PKMN_5"]
position = Vector2( 57.6, 34 )
texture = ExtResource( 22 )
hframes = 2

[node name="gender" type="Sprite" parent="PKMN_5"]
position = Vector2( 229, 32 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )

[node name="health_bar" parent="PKMN_5" instance=ExtResource( 24 )]
position = Vector2( 124, 56 )

[node name="Salir" type="Panel" parent="."]
editor/display_folded = true
margin_left = 398.0
margin_top = 325.0
margin_right = 510.0
margin_bottom = 377.0
focus_mode = 2
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre2" type="Label" parent="Salir"]
margin_left = 10.0
margin_top = 14.0
margin_right = 104.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "SALIR"
align = 1
valign = 3

[node name="Outline" type="Label" parent="Salir/Nombre2"]
margin_right = 94.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
text = "SALIR"
align = 1
valign = 3
__meta__ = {
"_edit_lock_": true
}

[node name="MSG" parent="." instance=ExtResource( 25 )]
margin_top = 318.0
margin_right = 398.0
custom_styles/panel = SubResource( 23 )

[node name="Label" parent="MSG" index="0"]
editor/display_folded = true
margin_left = 17.9383
margin_right = 459.938
custom_fonts/normal_font = SubResource( 24 )
text = "Elije a un Pokémon."

[node name="Label2" parent="MSG/Label" index="1"]
text = "Elije a un Pokémon."

[node name="next" parent="MSG" index="1"]
editor/display_folded = true
visible = false

[node name="AnimationPlayer" parent="MSG/next" index="0"]
root_node = NodePath("")

[connection signal="focus_entered" from="PKMN_0" to="." method="_on_PKMN_focus_entered"]
[connection signal="focus_entered" from="PKMN_1" to="." method="_on_PKMN_focus_entered"]
[connection signal="focus_entered" from="PKMN_2" to="." method="_on_PKMN_focus_entered"]
[connection signal="focus_entered" from="PKMN_3" to="." method="_on_PKMN_focus_entered"]
[connection signal="focus_entered" from="PKMN_4" to="." method="_on_PKMN_focus_entered"]
[connection signal="focus_entered" from="PKMN_5" to="." method="_on_PKMN_focus_entered"]
[connection signal="focus_entered" from="Salir" to="." method="_on_Salir_focus_entered"]

[editable path="PKMN_0/health_bar"]

[editable path="PKMN_2/health_bar"]

[editable path="MSG"]
